index.html change

--- a/player/index.html
+++ b/player/index.html
@@ -72,6 +72,6 @@
     </script>
   </head>
 
-  <iframe width="100%" height="900px" srcdoc="${indexPath}"></iframe>
+  <iframe width="100%" height="900px" src="${indexPath}"></iframe>
 </html>
 `
