--- a/scorm-repo/scorm_a7047b0f/launchpage.html
+++ b/scorm-repo/scorm_a7047b0f/launchpage.html
@@ -1,31 +1,52 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Loading OpenSesame Course</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link id="sesameseed-stylesheet" rel="stylesheet" type="text/css" href="https://player.opensesame.com/Static/App/SesameSeed/StyleSheet" />
+    <link
+      id="sesameseed-stylesheet"
+      rel="stylesheet"
+      type="text/css"
+      href="https://player.opensesame.com/Static/App/SesameSeed/StyleSheet"
+    />
     <!--[if IE]>
-	    <link id="sesameseed-stylesheet" rel="stylesheet" type="text/css" href="https://player.opensesame.com/Static/App/SesameSeed/IEStyleSheet" />
+      <link
+        id="sesameseed-stylesheet"
+        rel="stylesheet"
+        type="text/css"
+        href="https://player.opensesame.com/Static/App/SesameSeed/IEStyleSheet"
+      />
     <![endif]-->
-    <script type="text/javascript" src="https://player.opensesame.com/Static/App/SesameSeed/Base"></script>
-    <script type="text/javascript" src="https://player.opensesame.com/App/SesameSeed/Init?licenseGuid=57977056-873e-411d-a69a-d266240b15f0"></script>
-</head>
-<body>
+    <script
+      type="text/javascript"
+      src="https://player.opensesame.com/Static/App/SesameSeed/Base"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://player.opensesame.com/App/SesameSeed/Init?licenseGuid=57977056-873e-411d-a69a-d266240b15f0"
+    ></script>
+  </head>
+  <body>
     <div class="os-loading">
-        <div class="container">
-            <div class="logo-container">
-                <div class="opensesame-flurry-container">
-                    <div class="opensesame-flurry"></div>
-                </div>
-                <div class="opensesame-logo-text"></div>
-            </div>
-            <div>
-                <p style="letter-spacing: 0.25em;">LOADING</p>
-            </div>
-            <div class="terms">
-                <p>By accessing this course, you agree to our <a target="_blank" href="https://www.opensesame.com/legal">Terms &amp; Conditions</a></p>
-            </div>
+      <div class="container">
+        <div class="logo-container">
+          <div class="opensesame-flurry-container">
+            <div class="opensesame-flurry"></div>
+          </div>
+          <div class="opensesame-logo-text"></div>
         </div>
+        <div>
+          <p style="letter-spacing: 0.25em">LOADING</p>
+        </div>
+        <div class="terms">
+          <p>
+            By accessing this course, you agree to our
+            <a target="_blank" href="https://www.opensesame.com/legal"
+              >Terms &amp; Conditions</a
+            >
+          </p>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
